--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -23,55 +23,35 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Downloads / Apache NetBeans
+= Releases / Apache NetBeans
 :jbake-type: page
 :jbake-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans download
-:description: Apache NetBeans Download page
+:keywords: Apache NetBeans releases
+:description: Apache NetBeans Releases Page
 :toc: left
 :toc-title:
 
 [[releases]]
-== Current Release
-
-=== Apache NetBeans 10.0
+== Apache NetBeans 10.0
 
 Apache NetBeans 10.0 is the latest version of the IDE.
 
 - link:nb100/index.html[Apache NetBeans 10.0 Features]
 - link:nb100/nb100.html[Apache NetBeans 10.0], released on the 27th of December, 2018.
 
-[[downloading]]
-=== Downloading
+[[previous]]
+== Apache NetBeans 9.0
 
-////
-NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
-NOTE: It's mandatory to link against dist.apache.org for the sums & keys. https is recommended.
-////
-Apache NetBeans 10.0 is available for download from your closest Apache mirror. For this release no official installers are provided, please just download the binaries and unzip them.
+- link:nb90/[Apache NetBeans 9.0 Features]
+- link:nb90/nb90.html[Apache NetBeans 9.0], released on the 29th of July, 2018.
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip[incubating-netbeans-10.0-source.zip] 
-(link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip.sha512[SHA-512],
-link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip.asc[PGP ASC])
+== Pre-Apache NetBeans versions
 
-- Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip[incubating-netbeans-10.0-bin.zip] (
-link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.sha512[SHA-512],
-link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.asc[PGP ASC])
-
-*Note:* Apache NetBeans community member Carl Mosca has made link:https://github.com/carljmosca/netbeans-macos-bundle[a Mac OSX installation bundle available here].
-
-Also see the following YouTube clips:
-
-link:https://www.youtube.com/watch?v=am-7aa2hYgc[Get Started with NetBeans from a ZIP Archive]
-
-link:https://www.youtube.com/watch?v=I8gdC7BBtbs[Get Started with NetBeans from a Mac OSX Installer]
-
-////
-NOTE: Using https below is highly recommended.
-////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
+- https://netbeans.org/downloads/8.2/
+- https://netbeans.org/downloads/8.1/
+- https://netbeans.org/downloads/8.0/
+- https://netbeans.org/downloads/7.4/
 
 [[source]]
 == Building from source
@@ -101,27 +81,5 @@ This is a list of Apache NetBeans (incubating) repositories:
 - https://github.com/apache/incubator-netbeans-website This website's repository.
 - https://github.com/apache/incubator-netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
 - Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
-
-
-[[previous]]
-== Previous Releases
-
-=== Apache NetBeans 9.0
-
-- link:nb90/[Apache NetBeans 9.0 Features]
-- link:nb90/nb90.html[Apache NetBeans 9.0], released on the 29th of July, 2018.
-- link:nb90/nb90-rc1.html[Apache NetBeans 9.0 RC1], released on the 28th of May, 2018.
-- link:nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released on the 22nd of February, 2018.
-
-=== Downloads
-
-You can download previous Apache NetBeans versions by visiting
-https://archive.apache.org/dist/incubator/netbeans/, while pre-Apache NetBeans
-versions are here: 
-
-- https://netbeans.org/downloads/8.2/
-- https://netbeans.org/downloads/8.1/
-- https://netbeans.org/downloads/8.0/
-- https://netbeans.org/downloads/7.4/
 
 
