--- a/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
@@ -44,35 +44,41 @@ See link:/download/nb100/index.html[Apache NetBeans 10.0 Features] for a full li
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
-NOTE: It's mandatory to link against dist.apache.org for the sums & keys. https is recommended.
+NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
+NOTE: It's NOT recommended to link to github.
 ////
 Apache NetBeans 10.0 is available for download from your closest Apache mirror. For this release no official installers are provided, please just download the binaries and unzip them.
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip[incubating-netbeans-10.0-source.zip] 
-(link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip.sha512[SHA-512],
-link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip.asc[PGP ASC])
+(link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip.sha512[SHA-512],
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip.asc[PGP ASC])
 
 - Binaries: 
 link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip[incubating-netbeans-10.0-bin.zip] (
-link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.sha512[SHA-512],
-link:https://www-eu.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.asc[PGP ASC])
-
-*Note:* Apache NetBeans community member Carl Mosca has made link:https://github.com/carljmosca/netbeans-macos-bundle[a Mac OSX installation bundle available here].
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.sha512[SHA-512],
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.asc[PGP ASC])
 
 Also see the following YouTube clips:
 
 link:https://www.youtube.com/watch?v=am-7aa2hYgc[Get Started with NetBeans from a ZIP Archive]
-
 link:https://www.youtube.com/watch?v=I8gdC7BBtbs[Get Started with NetBeans from a Mac OSX Installer]
 
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://www.apache.org/dist/incubator/netbeans/KEYS[here].
 
 === Building from source
 
-The sources for this release have been tagged as link:https://github.com/apache/incubator-netbeans/tree/10.0-vc5[10.0-vc5] at github.  See the link:/download/index.html#source[instructions on how to build] this release yourself from the source code.
+To build Apache NetBeans (incubating) 10.0 from source you need:
+
+. Oracle's Java 8 or Open JDK v8.
+. Apache Ant 1.10 or greater (https://ant.apache.org).
+
+Once you have everything installed then:
+
+1. Unzip link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip[incubating-netbeans-10.0-source.zip] in a directory of your liking.
+2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE. Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 
 === Community approval
 
@@ -80,8 +86,8 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 
 - link:https://lists.apache.org/thread.html/a06ad60089470b0b52fe7e6f4c271d2fd1dcce722a5fe9b3aa008b3d@%3Cdev.netbeans.apache.org%3E[PPMC vote]
 - link:https://lists.apache.org/thread.html/305d657e57d04df3d4a13c76ab732e64ef72d107fe0f769d5f4bbd80@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
-
 - link:https://lists.apache.org/thread.html/12e90e3171b85cb1b2249c59fe25caeefd9f6edf0dc14b9916b0af6f@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
+- link:https://lists.apache.org/thread.html/baaaee55cb4e4daf8c6d9527cfbcf15d05ef58b50f9ee6d02146afa0@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
 
 === Release information
 
