--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -48,12 +48,12 @@ NOTE: It's mandatory to link against dist.apache.org for the sums & keys. https 
 ////
 Apache NetBeans 9.0 is available for download from your closest Apache mirror. For this release no official installers are provided, please just download the binaries and unzip them.
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip[incubating-netbeans-java-9.0-source.zip] (
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.asc[PGP ASC],
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.sha1[SHA-1])
-- Binaries: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip[incubating-netbeans-java-9.0-bin.zip] (
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.asc[PGP ASC],
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.sha1[SHA-1])
+- Source: link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip[incubating-netbeans-java-9.0-source.zip] (
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.asc[PGP ASC],
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.sha1[SHA-1])
+- Binaries: link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip[incubating-netbeans-java-9.0-bin.zip] (
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.asc[PGP ASC],
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.sha1[SHA-1])
 
 *Note:* Apache NetBeans community member Carl Mosca has made link:https://github.com/carljmosca/netbeans-macos-bundle[a Mac OSX installation bundle available here].
 
@@ -70,7 +70,16 @@ Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#
 
 === Building from source
 
-The sources for this release have been tagged as link:https://github.com/apache/incubator-netbeans/tree/9.0-vc3[9.0-vc3] at github.  See the link:/download/index.html#source[instructions on how to build] this release yourself from the source code.
+To build Apache NetBeans (incubating) from source you need:
+
+. Oracle's Java 8 or Open JDK v8.
+. Apache Ant 1.10 or greater (https://ant.apache.org).
+
+Once you have everything installed then:
+
+1. Unzip the source zip file in a directory of your liking.
+2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE. Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans` (or `.\nbbuild\netbeans\bin\netbeans` in
+Windows).
 
 === Community approval
 
