--- a/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
@@ -58,10 +58,9 @@ link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbean
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.asc[PGP ASC])
 
-Also see the following YouTube clips:
+Also see the following YouTube clip:
 
-link:https://www.youtube.com/watch?v=am-7aa2hYgc[Get Started with NetBeans from a ZIP Archive]
-link:https://www.youtube.com/watch?v=I8gdC7BBtbs[Get Started with NetBeans from a Mac OSX Installer]
+link:https://www.youtube.com/watch?v=O8cwpEY1OAQ[The Rough Guide to Apache NetBeans 10]
 
 ////
 NOTE: Using https below is highly recommended.
