Embedding Geertjan's video with the video macro
You can embed youtube videos in a page using video::the-youtube-video-id[youtube, title="Whatever"]
where the-youtube-video-id is the youtube video identifier (from the url). In this case O8cwpEY1OAQ

--- a/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
@@ -58,14 +58,14 @@ link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbean
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.asc[PGP ASC])
 
-Also see the following YouTube clip:
-
-link:https://www.youtube.com/watch?v=O8cwpEY1OAQ[The Rough Guide to Apache NetBeans 10]
-
 ////
 NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://www.apache.org/dist/incubator/netbeans/KEYS[here].
+
+Also see the following YouTube clip:
+
+video::O8cwpEY1OAQ[youtube, title="The Rough Guide to Apache NetBeans 10"]
 
 === Building from source
 
