Tutorials: java/php/ide to help/index.html

--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -28,9 +28,138 @@
 [[documentation]]
 == Documentation
 
-NOTE: Documentation is being transferred from Oracle to Apache NetBeans. 
+Here is a list of NetBeans tutorials available. Some of these tutorials have been automatically converted from the third Oracle donation, and need to be reviewed. You're welcome to contribute your review!
 
-The following resources are available:
+=== IDE tutorials
+
+- link:/kb/docs/ide/mysql.html[Connecting to a MySQL Database]
+- link:/kb/docs/ide/oracle-db.html[Connecting to Oracle Database from NetBeans IDE]
+- link:/kb/docs/ide/platform-screencast.html[Creating Applications on NetBeans Platform 6.9]
+- link:/kb/docs/ide/nb65-intro-screencast.html[Introduction to NetBeans IDE 6.5]
+- link:/kb/docs/ide/NetBeans_DTrace_GUI_Plugin_0_4.html[NetBeans DTrace GUI Plug-in]
+- link:/kb/docs/ide/overview-screencast-smaller.html[NetBeans IDE 7.1 Overview]
+- link:/kb/docs/ide/overview-screencast_731.html[NetBeans IDE 7.3.1 Overview]
+- link:/kb/docs/ide/overview-screencast.html[NetBeans IDE 8.0 Overview]
+- link:/kb/docs/ide/index.html[NetBeans IDE Tutorials]
+- link:/kb/docs/ide/overview-screencast_74.html[]
+- link:/kb/docs/ide/macro-keywords.html[Redirect Page]
+- link:/kb/docs/ide/database-improvements-screencast.html[Screencast: Database Support in NetBeans IDE]
+- link:/kb/docs/ide/section.html[]
+- link:/kb/docs/ide/install-and-configure-mysql-server.html[Setting Up the MySQL Database Server in the Windows Operating System]
+- link:/kb/docs/ide/clearcase.html[Using ClearCase Support in NetBeans IDE]
+- link:/kb/docs/ide/cvs.html[Using CVS Support in NetBeans IDE]
+- link:/kb/docs/ide/git.html[Using Git Support in NetBeans IDE]
+- link:/kb/docs/ide/mercurial.html[Using Mercurial Support in NetBeans IDE]
+- link:/kb/docs/ide/subversion.html[Using Subversion Support in NetBeans IDE]
+- link:/kb/docs/ide/mercurial-queues.html[Using Support for Mercurial Queues in NetBeans IDE]
+- link:/kb/docs/ide/git_nb_ssh_screencast.html[Video of Cloning a Git Repository Using NetBeans IDE]
+- link:/kb/docs/ide/github_nb_screencast.html[Video of Setting Up a GitHub Repository Using NetBeans IDE]
+- link:/kb/docs/ide/team-servers.html[Working With a Team Server in NetBeans IDE]
+- link:/kb/docs/ide/java-db.html[Working with the Java DB (Derby) Database]
+
+=== Java tutorials
+
+- link:/kb/docs/java/gui-filechooser.html[Adding a File Chooser to a Java Application]
+- link:/kb/docs/java/jmx-tutorial.html[Adding Java Management Extensions (JMX) Instrumentation to a Java Application]
+- link:/kb/docs/java/annotations.html[Annotation Processors Support in the NetBeans IDE]
+- link:/kb/docs/java/annotations-lombok.html[Annotation Processors Support in the NetBeans IDE, Part I: Using Project Lombok]
+- link:/kb/docs/java/annotations-custom.html[Annotation Processors Support in the NetBeans IDE, Part II: Using Own Custom Annotation Processors in the IDE]
+- link:/kb/docs/java/gui-binding.html[Binding Beans and Data in a Java Application]
+- link:/kb/docs/java/editor-codereference.html[ Code Assistance in the NetBeans IDE Java Editor: A Reference Guide]
+- link:/kb/docs/java/maven-hib-java-se.html[Creating a Maven Swing Application Using Hibernate - NetBeans IDE Tutorial]
+- link:/kb/docs/java/debug-multithreaded.html[Debugging Multi-threaded Applications in NetBeans IDE]
+- link:/kb/docs/java/gbcustomizer-basic.html[Designing a Basic Java Form Using the GridBag Customizer]
+- link:/kb/docs/java/gbcustomizer-advanced.html[Designing an Advanced Java Form Using the GridBag Customizer]
+- link:/kb/docs/java/gui-builder-screencast.html[Designing a Swing GUI in NetBeans IDE]
+- link:/kb/docs/java/quickstart-gui.html[Designing a Swing GUI in NetBeans IDE]
+- link:/kb/docs/java/jmx-manager-tutorial.html[Developing a Java Management Extensions (JMX) Manager and Connecting to a Remote JMX Agent]
+- link:/kb/docs/java/javase-intro.html[Developing General Java Applications]
+- link:/kb/docs/java/java-editor-screencast.html[Editing Java Code in NetBeans IDE 6.9.1]
+- link:/kb/docs/java/gui-gaps.html[Gap Editing Support in the NetBeans GUI Builder]
+- link:/kb/docs/java/jmx-getstart.html[Getting Started with JMX Monitoring in NetBeans IDE]
+- link:/kb/docs/java/quickstart-gui-legend.html[GUI Builder Visual Feedback Legend]
+- link:/kb/docs/java/gui-image-display.html[Handling Images in a Java GUI Application]
+- link:/kb/docs/java/gui-automatic-i18n.html[Internationalizing a GUI Form]
+- link:/kb/docs/java/groovy-quickstart.html[Introduction to Groovy]
+- link:/kb/docs/java/gui-functionality.html[Introduction to GUI Building]
+- link:/kb/docs/java/profiler-intro.html[Introduction to Profiling Java Applications in NetBeans IDE]
+- link:/kb/docs/java/index.html[Java Tutorials]
+- link:/kb/docs/java/native_pkg.html[Native Packaging in NetBeans IDE]
+- link:/kb/docs/java/quickstart.html[NetBeans IDE Java Quick Start Tutorial]
+- link:/kb/docs/java/javase-jdk7.html[Overview of JDK 7 Support in NetBeans IDE]
+- link:/kb/docs/java/javase-jdk8.html[Overview of JDK 8 Support in NetBeans IDE]
+- link:/kb/docs/java/javase-deploy.html[Packaging and Distributing Java Desktop Applications]
+- link:/kb/docs/java/profile-loadgenerator.html[]
+- link:/kb/docs/java/profiler-screencast.html[Profiling Points, Drill Down Graph, Heap Walker in NetBeans IDE]
+- link:/kb/docs/java/import-eclipse.html[Redirect Page]
+- link:/kb/docs/java/project-setup.html[Redirect Page]
+- link:/kb/docs/java/editor-inspect-transform.html[Refactoring with Inspect and Transform in the NetBeans IDE Java Editor]
+- link:/kb/docs/java/section.html[]
+- link:/kb/docs/java/code-inspect.html[Static Code Analysis in the NetBeans IDE Java Editor]
+- link:/kb/docs/java/hibernate-java-se.html[Using Hibernate in a Java Swing Application]
+- link:/kb/docs/java/javase-embedded.html[Using Oracle Java SE Embedded Support in NetBeans IDE]
+- link:/kb/docs/java/profiler-profilingpoints.html[Using Profiling Points in NetBeans IDE]
+- link:/kb/docs/java/debug-visual.html[Using the Visual Debugger in NetBeans IDE]
+- link:/kb/docs/java/debug-deadlock-screencast.html[Video of Deadlock Detection Using the NetBeans Debugger]
+- link:/kb/docs/java/nb_fx_screencast.html[Video of JavaFX Support in NetBeans IDE]
+- link:/kb/docs/java/jdk8-nb74-screencast.html[Video of JDK 8 Support in NetBeans IDE 7.4]
+- link:/kb/docs/java/jdk7-nb70-screencast.html[Video of NetBeans IDE Support for JDK 7]
+- link:/kb/docs/java/jdk8-migration-screencast.html[Video of Smart Migration to JDK 8 in NetBeans IDE]
+- link:/kb/docs/java/editor-formatting-screencast.html[Video of the Code Formatting Features in the NetBeans IDE]
+- link:/kb/docs/java/refactoring-nb71-screencast.html[Video of the Inspect and Transform Refactoring Feature in NetBeans IDE]
+- link:/kb/docs/java/debug-multithreaded-screencast.html[Video of the Multithreaded Debugging with the NetBeans IDE]
+- link:/kb/docs/java/introduce-refactoring-screencast.html[Video of the Refactoring Options in NetBeans IDE]
+- link:/kb/docs/java/code-inspect-screencast.html[Video of the Static Code Analysis Feature in the NetBeans IDE]
+- link:/kb/docs/java/debug-visual-screencast.html[Video of the Using the Visual Debugger in NetBeans IDE]
+- link:/kb/docs/java/testng-screencast.html[Video of Using TestNG in NetBeans IDE]
+- link:/kb/docs/java/debug-evaluator-screencast.html[Video of Using the Code Snippet Evaluator in the NetBeans Debugger]
+- link:/kb/docs/java/debug-stepinto-screencast.html[Video of Visual Step Into Action in NetBeans Debugger]
+- link:/kb/docs/java/junit-intro.html[Writing JUnit Tests in NetBeans IDE]
+
+=== PHP Tutorials
+
+- link:/kb/docs/php/flickr-screencast.html[Building a Flickr Slideshow with PHP]
+- link:/kb/docs/php/code-templates.html[Code Templates in NetBeans IDE for PHP]
+- link:/kb/docs/php/configure-php-environment-mac-os.html[Configuring PHP, Apache, MySQL, and Xdebug for PHP development in MAC OS X]
+- link:/kb/docs/php/configure-php-environment-windows.html[Configuring PHP Development Environment in Windows]
+- link:/kb/docs/php/configure-php-environment-ubuntu.html[Configuring the PHP Development Environment in Linux Ubuntu]
+- link:/kb/docs/php/wish-list-tutorial-main-page.html[Creating a Database Driven Application With NetBeans IDE PHP Editor]
+- link:/kb/docs/php/wish-list-lesson1.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson2.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson3.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson4.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson5.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson6.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson7.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson8.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-lesson9.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/wish-list-oracle-lesson1.html[Creating a Database Driven Application With PHP]
+- link:/kb/docs/php/debugging.html[Debugging PHP Source Code in the NetBeans IDE]
+- link:/kb/docs/php/php-variables-screencast.html[Declaring Variables in Comments and Associated Code Completion Features in NetBeans PHP Editor 6.7]
+- link:/kb/docs/php/project-config-screencast.html[Demo of PHP support in NetBeans 6.5 - Part I: Projects and Configuration]
+- link:/kb/docs/php/editor-screencast.html[Demo of PHP support in NetBeans 6.5 - Part II: Editor Features]
+- link:/kb/docs/php/remote-hosting-and-ftp-account.html[Deploying a PHP Application on a Remote Web Server Using the NetBeans IDE]
+- link:/kb/docs/php/screencast-doctrine2.html[Doctrine 2 Support in NetBeans IDE for PHP]
+- link:/kb/docs/php/screencast-php54.html[Editing PHP 5.4 with NetBeans IDE for PHP]
+- link:/kb/docs/php/screencast-apigen.html[Generating PHP Documentation With NetBeans IDE]
+- link:/kb/docs/php/screencast-phpdoc.html[Generating PHP Documentation With NetBeans IDE]
+- link:/kb/docs/php/ajax-quickstart.html[Introduction to Ajax for PHP Web Applications]
+- link:/kb/docs/php/quickstart.html[NetBeans IDE PHP Quick Start Tutorial]
+- link:/kb/docs/php/namespace-code-completion-screencast.html[PHP Namespace Support in NetBeans IDE]
+- link:/kb/docs/php/index.html[PHP Tutorials]
+- link:/kb/docs/php/screencast-rename-refactoring.html[Rename Refactoring and Other Editor Improvements in NetBeans IDE 7.0 for PHP]
+- link:/kb/docs/php/section.html[]
+- link:/kb/docs/php/project-setup.html[Setting Up a PHP Project]
+- link:/kb/docs/php/screencast-smarty.html[Smarty Support in NetBeans IDE for PHP]
+- link:/kb/docs/php/screencast-continuous-builds.html[Support for PHP on Continuous Build Servers]
+- link:/kb/docs/php/phpunit.html[Testing with PHPUnit and Selenium]
+- link:/kb/docs/php/php-editor-screencast.html[The PHP Editor in NetBeans IDE 6.9-7.0 (Preview)]
+- link:/kb/docs/php/zend-framework-screencast.html[Zend Framework Support in NetBeans IDE for PHP]
+
+
+== Other resources
+
+These other resources are available:
 
 - Short videos on how to link:getting-started.html[get started with the Apache NetBeans Platform] to build Java Desktop Applications.
 - Visit the link:https://netbeans.org/kb/index.html[netbeans.org docs & support] section in the old website.
