--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -30,15 +30,9 @@
 
 Here is a list of NetBeans tutorials available. Some of these tutorials have been automatically converted from Oracle's donation to Apache, and need to be reviewed. You're welcome to contribute your review!
 
-=== IDE tutorials
-
-- link:/kb/docs/ide/index.html[NetBeans IDE Tutorials]
-
-=== Java tutorials
+- link:/kb/docs/ide/index.html[General NetBeans IDE Tutorials]
 
 - link:/kb/docs/java/index.html[Java Tutorials]
-
-=== PHP Tutorials
 
 - link:/kb/docs/php/index.html[PHP Tutorials]
 
