--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -30,11 +30,11 @@
 
 Here is a list of NetBeans tutorials available. Some of these tutorials have been automatically converted from Oracle's donation to Apache, and need to be reviewed. You're welcome to contribute your review!
 
-- link:/kb/docs/ide/index.html[General NetBeans IDE Tutorials]
-
 - link:/kb/docs/java/index.html[Java Tutorials]
 
 - link:/kb/docs/php/index.html[PHP Tutorials]
+
+- link:/kb/docs/ide/index.html[Integration with External Tools and Services]
 
 == Other resources
 
