--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -26,9 +26,9 @@
 :toc-title:
 
 [[documentation]]
-== Documentation
+== Learning Trails
 
-Here is a list of NetBeans tutorials available. Some of these tutorials have been automatically converted from Oracle's donation to Apache, and need to be reviewed. You're welcome to contribute your review!
+The following learning trails provide you with everything you need to know to develop applications using NetBeans IDE.
 
 - link:/kb/docs/java/index.html[General Java Development]
 
