--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -36,6 +36,8 @@ The following learning trails provide you with everything you need to know to de
 
 - link:/kb/docs/ide/index.html[Integration with External Tools and Services]
 
+*Note:* The learning trails, tutorials, and related documentation are works in progress, incomplete, and being reviewed: link:https://issues.apache.org/jira/browse/NETBEANS-1867[NETBEANS-1867].
+
 == Other resources
 
 These other resources are available:
