--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -30,7 +30,7 @@
 
 The following learning trails provide you with everything you need to know to develop applications using NetBeans IDE.
 
-- link:/kb/docs/java/index.html[General Java Development]
+- link:/kb/docs/java/index.html[Java SE Applications]
 
 - link:/kb/docs/php/index.html[PHP and HTML5 Applications]
 
