--- a/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
@@ -58,6 +58,8 @@ link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbean
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-bin.zip.asc[PGP ASC])
 
+- Javadoc for this release is available at https://bits.netbeans.org/10.0/javadoc
+
 ////
 NOTE: Using https below is highly recommended.
 ////
