--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -42,6 +42,7 @@ The following learning trails provide you with everything you need to know to de
 
 These other resources are available:
 
+- Javadoc is updated hourly at https://bits.netbeans.org/dev/javadoc
 - Short videos on how to link:getting-started.html[get started with the Apache NetBeans Platform] to build Java Desktop Applications.
 - Visit the link:https://netbeans.org/kb/index.html[netbeans.org docs & support] section in the old website.
 - Our link:https://www.youtube.com/user/NetBeansVideos[YouTube Video Channel] contains many tutorials and tips.
