Make the download button more prominent

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 
 [[releases]]
-== Apache NetBeans 10.0
+== Apache NetBeans 10.0 (link:nb100/nb100.html[download])
 
 Apache NetBeans 10.0 is the latest version of the IDE.
 
