Link colors / Header Sizes / Page Titles (#317)
* Redesign: Header sizes, link colors, titles
* Adding download buttons

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -23,7 +23,7 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Releases / Apache NetBeans
+= Apache NetBeans Releases
 :jbake-type: page
 :jbake-tags: download
 :jbake-status: published
@@ -31,20 +31,21 @@ for important requirements for download pages for Apache projects.
 :description: Apache NetBeans Releases Page
 :toc: left
 :toc-title:
+:linkattrs:
 
 [[releases]]
-== Apache NetBeans 10.0 (link:nb100/nb100.html[download])
+== Apache NetBeans 10.0
 
-Apache NetBeans 10.0 is the latest version of the IDE.
+Apache NetBeans 10.0 is the latest version of the IDE. It was released on the 27th of December, 2018.
 
-- link:nb100/index.html[Apache NetBeans 10.0 Features]
-- link:nb100/nb100.html[Apache NetBeans 10.0], released on the 27th of December, 2018.
+link:nb100/index.html[Features, role="button"] link:nb100/nb100.html[Download, role="button success"]
 
 [[previous]]
 == Apache NetBeans 9.0
 
-- link:nb90/[Apache NetBeans 9.0 Features]
-- link:nb90/nb90.html[Apache NetBeans 9.0], released on the 29th of July, 2018.
+Apache NetBeans 9.0 was released on the 29th of July, 2018.
+
+link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button success"] 
 
 == Pre-Apache NetBeans versions
 
