--- a/netbeans.apache.org/src/content/community/index.asciidoc
+++ b/netbeans.apache.org/src/content/community/index.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Community
+= Apache NetBeans Community
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -25,18 +25,19 @@
 :toc: left
 :toc-title:
 
-== link:mailing-lists.html[Stay Informed]
-The Apache NetBeans Community link:mailing-lists.html[communicates in many different ways]. See how to stay informed and in touch with other NetBeans users and developers.
+== Stay Informed
 
-== link:/participate/index.html[Participate]
+The Apache NetBeans Community uses the link:mailing-lists.html[mailing lists] as the primary source of comunication. . See how to stay informed and in touch with other NetBeans users and developers.
+
+== Participate
 We welcome link:/participate/index.html[all kind of contributions]. And there are many ways to contribute: see how you can participate in Apache NetBeans.
 
-== link:events.html[NetBeans Events]
+== NetBeans Events
 NetBeans users and developers participate in link:events.html[different events]. See how this works.
 
-== link:who.html[Who We Are]
+== Who We Are
 The Apache NetBeans source code was donated by Oracle to the link:https://www.apache.org[Apache Software Foundation] in 2016.
 Since then many contributors have joined the project. Find out link:who.html[who is who], and link:committer.html[how to become a committer].
 
-== link:nekobean.html[NekoBean]
+== NekoBean
 link:nekobean.html[NekoBean] is a mascot of Apache NetBeans Community.
