--- a/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
+++ b/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Keep informed / Apache NetBeans
+= Mailing Lists
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -26,8 +26,6 @@
 :toc-title: 
 
 [[mailing-lists]]
-== Mailing lists
-
 Mailing lists are the main way to get in touch with the NetBeans Community. Feel free to subscribe and participate. 
 
 Lists are managed with link:https://untroubled.org/ezmlm/[ezmlm], refer to link:https://untroubled.org/ezmlm/manual/[ezmlm manual] for useful help commands.
