--- a/netbeans.apache.org/src/content/download/nb100/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/index.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Apache NetBeans IDE 10.0 features
+= Apache NetBeans (incubating) 10.0 Features
 :jbake-type: page
 :jbake-tags: 10.0 features
 :jbake-status: published
@@ -39,15 +39,10 @@ nb100/nb101.asciidoc (if any) -> NetBeans 10.1 release information
 ////
 
 
-== Apache NetBeans IDE (incubating) 10.0 
-
-Apache NetBeans (incubating) 10.0 is the second major release of the Apache NetBeans IDE.
+Apache NetBeans (incubating) 10.0 is the second major release of the Apache NetBeans IDE. It was released in December, 2018. link:/download/nb100/nb100.html[Click here to download] this release.
 
 This release is focused in adding support for JDK 11, JUnit 5, PHP, JavaScript and Groovy, as well in solving many issues.
 
-=== Downloads
-
-- For download instructions please see link:/download/nb100/nb100.html[Apache NetBeans 10.0], released in December 2018.
 
 ////
 To display a feature do as follows:
@@ -84,7 +79,7 @@ Note: When rendered into HTML, the images will automatically be wrapped around '
 
 ////
 
-=== JDK 11 Support
+== JDK 11 Support
 
 JDK 11 support has been enhanced in the following ways:
 
@@ -102,14 +97,14 @@ image:var-autocomplete-1st-param.png[Code completion support for var type lambda
 
 See the link:https://cwiki.apache.org/confluence/display/NETBEANS/Feature%3A+JDK+11[JDK 11 Confluence Page] for more detailed features.
 
-=== PHP Support
+== PHP Support
 
 All the PHP support for NetBeans 10 was contributed by our NetBeans committer
 link:http://netbeans.apache.org/community/who.html#_junichi_yamamoto[Junichi Yamamoto]. 
 
 These are some of the new features:
 
-==== PHP 7.3
+=== PHP 7.3
 [.feature]
 --
 
@@ -127,7 +122,7 @@ image::nb100-php73-flexible-heredoc-and-nowdoc-syntaxes.png[role="left"]
 
 --
 
-==== PHP 7.2
+=== PHP 7.2
 [.feature]
 --
 For PHP 7.2 we support trailing commas in list syntax, coloring for object types and PHP version in project properties.
@@ -135,7 +130,7 @@ For PHP 7.2 we support trailing commas in list syntax, coloring for object types
 image::nb100_php_editor_php_version_72_trailing_commas_in_list_syntax.png[role="right"]
 --
 
-==== PHP 7.1
+=== PHP 7.1
 [.feature]
 --
 For PHP 7.1 we have class constant visibility, multi-catch exception handling, nullable types, support for keys in list(), 
@@ -144,14 +139,14 @@ coloring for new keywords (void, iterable).
 image::nb100_php_editor_class_constant_visibility_01.png[role="left"]
 --
 
-==== More PHP features
+=== More PHP features
 
 And more: context sensitive lexer, PHPStan support, debugger, twig, hints, suggestions, code completion... visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Feature%3A+PHP[PHP Features Page] 
 and link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+10.0+New+and+Noteworthy#ApacheNetBeans10.0NewandNoteworthy-OpenJDK[NetBeans 10 New and Noteworthy] 
 for more details on PHP support.
 
 
-=== JUnit 5
+== JUnit 5
 
 [.feature]
 --
