--- a/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
@@ -23,24 +23,17 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Apache NetBeans 10.0 / Apache NetBeans
+= Downloading Apache NetBeans (incubating) 10.0 
 :jbake-type: page
 :jbake-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans 10.0 release
-:description: Apache NetBeans 10.0 release information
+:keywords: Apache NetBeans 10.0 Download
+:description: Apache NetBeans 10.0 Download
 :toc: left
 :toc-title:
 
-== Apache NetBeans 10.0 Release
-
-Apache NetBeans (incubating) 10.0 announced on the 27th of December, 2018.
-
-=== Main features
-
+Apache NetBeans (incubating) 10.0 was announced on the 27th of December, 2018.
 See link:/download/nb100/index.html[Apache NetBeans 10.0 Features] for a full list of features.
-
-=== Downloading
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
@@ -69,7 +62,7 @@ Also see the following YouTube clip:
 
 video::O8cwpEY1OAQ[youtube, title="The Rough Guide to Apache NetBeans 10"]
 
-=== Building from source
+== Building from source
 
 To build Apache NetBeans (incubating) 10.0 from source you need:
 
@@ -81,7 +74,7 @@ Once you have everything installed then:
 1. Unzip link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-10.0/incubating-netbeans-10.0-source.zip[incubating-netbeans-10.0-source.zip] in a directory of your liking.
 2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE. Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 
-=== Community approval
+== Community approval
 
 As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
@@ -90,7 +83,7 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 - link:https://lists.apache.org/thread.html/12e90e3171b85cb1b2249c59fe25caeefd9f6edf0dc14b9916b0af6f@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
 - link:https://lists.apache.org/thread.html/baaaee55cb4e4daf8c6d9527cfbcf15d05ef58b50f9ee6d02146afa0@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
 
-=== Release information
+== Release information
 
 Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+10[Apache NetBeans 10 page] for further details.
 
