--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Apache NetBeans IDE 9.0 features
+= Apache NetBeans (incubating) 9.0 Features
 :jbake-type: page
 :jbake-tags: 9.0 features
 :jbake-status: published
@@ -27,20 +27,13 @@
 :toc-title: 
 :toclevels: 4
 
-== Apache NetBeans IDE (incubating) 9.0 
+Apache NetBeans 9.0 is the first release of the Apache NetBeans IDE, it was released
+on July 2018. link:/download/nb90/nb90.html[Click here to download] this release.
 
-Apache NetBeans 9.0 is the first release of the Apache NetBeans IDE.
+The main goals for this release are IP clearance of the Oracle code donation and Java 9 and Java 10 Support.
 
-The main goals for this release are
+Features include:
 
-- IP clearance of the Oracle code donation.
-- Java 9 and 10 Support.
-
-=== Downloads
-
-- See link:/download/nb90/nb90.html[Apache NetBeans 9.0], released in July 2018.
-
-=== New Features
 
 ////
 To display a feature do as follows:
@@ -77,7 +70,7 @@ Note: When rendered into HTML, the images will automatically be wrapped around '
 
 ////
 
-==== Supporting Local Variable Type Inference
+== Supporting Local Variable Type Inference
 
 New hints, error handlers, and refactorings for transforming to/from the new JDK 10 "var" type:
 
@@ -101,7 +94,7 @@ Var type is not supported for array initializer. This hint helps correct compila
 
 image:invalidArray.png[New Error Hint for var Array declaration, title="New Error Hint for var Array declaration", role="left", link="invalidArray.png"]
 
-==== Supporting the Jigsaw Module System
+== Supporting the Jigsaw Module System
 [.feature]
 --
 image:nb90-module-info.png[Adding module-info.java, title="Adding module-info.java", role="left", link="nb90-module-info.png"]
@@ -120,7 +113,7 @@ image:nb90-module-info-completion.png[Autocompletion in module-info.java, title=
 Of course, we provide full autocompletion for `module-info.java`
 --
 
-==== A brand new Java Modular Application project type
+== A brand new Java Modular Application project type
 [.feature]
 --
 image:nb90-new-multi-module.png[Java Modular Application, title="New Java Modular Application Project Type", role="left", link="nb90-new-multi-module.png"]
@@ -134,7 +127,7 @@ appropriate `exports` and `requires` in `module-info.java`, and all modules
 in the project will be compiled at once.
 --
 
-==== Java Shell support
+== Java Shell support
 [.feature]
 --
 image:nb90-javashell.png[Java Shell Support, title="Java Shell Support", role="left", link="nb90-javashell.png"]
