--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -23,7 +23,7 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Apache NetBeans 9.0 / Apache NetBeans
+= Downloading Apache NetBeans (incubating) 9.0 
 :jbake-type: page
 :jbake-tags: download
 :jbake-status: published
@@ -32,15 +32,8 @@ for important requirements for download pages for Apache projects.
 :toc: left
 :toc-title:
 
-== Apache NetBeans 9.0 Release
-
-Apache NetBeans (incubating) 9.0 announced on the 29th of July, 2018.
-
-=== Main features
-
+Apache NetBeans (incubating) 9.0 was announced on the 29th of July, 2018.
 See link:/download/nb90/index.html[Apache NetBeans 9.0 Features] for a full list of features.
-
-=== Downloading
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
@@ -69,7 +62,7 @@ NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha1 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
 
-=== Building from source
+== Building from source
 
 To build Apache NetBeans (incubating) from source you need:
 
@@ -82,7 +75,7 @@ Once you have everything installed then:
 2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE. Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans` (or `.\nbbuild\netbeans\bin\netbeans` in
 Windows).
 
-=== Community approval
+== Community approval
 
 As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
@@ -91,6 +84,6 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 - link:https://lists.apache.org/thread.html/ab58e2c75d260a91851d8def412b1ef6648aaf4f690b205aaaf53924@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
 - link:https://lists.apache.org/thread.html/0cdb410ae900833f32c9d9546c8bf2580e54e8777a869240241b84b2@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
 
-=== Known issues
+== Known issues
 
 Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+9.0[this confluence page] for a list of known issues.
