--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Getting Help / Apache NetBeans
+= Getting Help
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -51,10 +51,9 @@ These other resources are available:
 - The link:https://github.com/apache/incubator-netbeans-website[current Apache NetBeans website] (i.e., this website) is also hosted at github.
 
 [[wiki]]
-== link:/wiki/index.asciidoc[Apache NetBeans Wiki]
+== Apache NetBeans Wiki
 
 Some parts of the NetBeans Wiki link:/wiki/index.asciidoc[have been ported], but need review.
-
 
 [[support]]
 == Support
