--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Participate / Apache NetBeans
+= Participating in Apache NetBeans
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -33,23 +33,27 @@ being part of our Community.
 You can participate in the Apache NetBeans (Incubating) Project in many different ways.
 Here are some ideas:
 
-== link:submit-pr.html[Contributing code]
+== Contributing code
+
 See link:submit-pr.html[contributing code] to learn how to contribute code to the Apache NetBeans project.
 
-== link:report-issue.html[Reporting issues]
+== Reporting issues
+
 See link:report-issue.html[reporting issues] for instructions on how to report an issue.
 
-== link:netcat.html[Join the NetCAT program]
+== Join the NetCAT program
 The NetBeans Community Acceptance Testing program (link:netcat.html[NetCAT]) has helped stabilize development
 builds for years.
 
 [[documentation]]
 == Improving the documentation
+
 We will be porting existing NetBeans documentation soon. Consider joining the
 link:/community/mailing-lists.html[dev mailing list] for updates on how to help with this task.
 
 [[asf]]
 == Contributing to the ASF
+
 You may also want to consider link:https://www.apache.org/foundation/contributing.html[donating to the
 Apache Software Foundation], joining the link:https://www.apache.org/foundation/sponsorship.html[ASF
 Sponsorship Program], or link:https://www.apache.org/foundation/buy_stuff.html[buying ASF merchandise].
