--- a/netbeans.apache.org/src/content/participate/netcat.asciidoc
+++ b/netbeans.apache.org/src/content/participate/netcat.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= NetCAT / Apache NetBeans
+= NetCAT 
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
