--- a/netbeans.apache.org/src/content/participate/report-issue.asciidoc
+++ b/netbeans.apache.org/src/content/participate/report-issue.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Reporting issues / Apache NetBeans
+= Reporting issues
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
