--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Submitting Pull Requests / Apache NetBeans
+= Submitting Pull Requests
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -27,8 +27,6 @@
 :toc-title: 
 
 [contributing-code]
-== Contributing Code
-
 Contributing code to the Apache NetBeans project is not very different to contributing code for any other Apache software project,
 so the link:https://www.apache.org/dev/contributors[Apache's Guide for New Project Contributors] is worth a read.
 
