--- a/netbeans.apache.org/src/content/community/events.asciidoc
+++ b/netbeans.apache.org/src/content/community/events.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Events
+= NetBeans Events
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
