--- a/netbeans.apache.org/src/content/download/nb100/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/index.asciidoc
@@ -152,7 +152,7 @@ for more details on PHP support.
 --
 
 JUnit 5.3.1 has been added as a new Library to NetBeans, so you can quickly add
-it to your Java projects. For Maven projects without no existing tests, JUnit 5
+it to your Java projects. For Maven projects without existing tests, JUnit 5
 is now the default JUnit version.
 
 image:nb100-junit5-library-small.png[JUnit 5 Library, role="left", link="nb100-junit5-library.png"]
