minor typo + sha512 + asc
try to have a  better view

--- a/netbeans.apache.org/src/content/download/maven/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/maven/index.asciidoc
@@ -35,7 +35,7 @@ for important requirements for download pages for Apache projects.
 
 == Mirror selection
 ////
-  use  raw html to epalce bracket items with apache mirror with the cgi script
+  use  raw html to replace bracket items with apache mirror with the cgi script
 ////
 ++++
 <p>
@@ -77,10 +77,17 @@ If all mirrors are failing, there are <i>backup</i> mirrors (at the end of the m
 ++++
 
 == Apache NetBeans (incubating) parent pom 1 
- 
-link:++[prefered]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip++[netbeans/incubating-nebeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip]
+
+|===
+| | Links  | Checksum | Signature
+
+|Apache NetBeans (incubating) parent pom 1  | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip++[incubating-apache-netbeans-parent-1-source-release.zip] | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.sha512++[incubating-apache-netbeans-parent-1-source-release.zip.sha512] | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.asc++[incubating-apache-netbeans-parent-1-source-release.zip.asc]
+
+|===
 
 
-== Others
 
-placeholder
+
+== Previous Versions
+
+Older non-recommended releases can be found on our link:https://archive.apache.org/dist/incubator/netbeans/[archive of netbeans]
