change link to asc and sha512

--- a/netbeans.apache.org/src/content/download/maven/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/maven/index.asciidoc
@@ -81,7 +81,7 @@ If all mirrors are failing, there are <i>backup</i> mirrors (at the end of the m
 |===
 | | Links  | Checksum | Signature
 
-|Apache NetBeans (incubating) parent pom 1  | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip++[incubating-apache-netbeans-parent-1-source-release.zip] | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.sha512++[incubating-apache-netbeans-parent-1-source-release.zip.sha512] | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.asc++[incubating-apache-netbeans-parent-1-source-release.zip.asc]
+|Apache NetBeans (incubating) parent pom 1  | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip++[incubating-apache-netbeans-parent-1-source-release.zip] | link:++https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.sha512++[incubating-apache-netbeans-parent-1-source-release.zip.sha512] | link:++https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.asc++[incubating-apache-netbeans-parent-1-source-release.zip.asc]
 
 |===
 
