--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -34,9 +34,17 @@ for important requirements for download pages for Apache projects.
 :linkattrs:
 
 [[releases]]
+
+== Apache NetBeans 11.0
+
+Apache NetBeans 11.0 is the latest version of the IDE. It was released on April, 2019.
+
+link:nb110/index.html[Features, role="button"] link:nb110/nb110.html[Download, role="button success"]
+
+
 == Apache NetBeans 10.0
 
-Apache NetBeans 10.0 is the latest version of the IDE. It was released on the 27th of December, 2018.
+Apache NetBeans 10.0 was released on the 27th of December, 2018.
 
 link:nb100/index.html[Features, role="button"] link:nb100/nb100.html[Download, role="button success"]
 
