--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -32,7 +32,7 @@ for important requirements for download pages for Apache projects.
 :toc: left
 :toc-title:
 
-Apache NetBeans (incubating) 11.0 was announced on April, 2019.
+Apache NetBeans (incubating) 11.0 was announced on April the 4th, 2019.
 See link:/download/nb110/index.html[Apache NetBeans 11.0 Features] for a full list of features.
 
 ////
@@ -75,9 +75,9 @@ Once you have everything installed then:
 As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
 - link:https://lists.apache.org/thread.html/290786ea9eda2215a93ca18084945d655053597ca9745ecc6d555d79@%3Cdev.netbeans.apache.org%3E[PPMC vote]
-// - link:https://lists.apache.org/thread.html/305d657e57d04df3d4a13c76ab732e64ef72d107fe0f769d5f4bbd80@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
+- link:https://lists.apache.org/thread.html/c406ae1a45c282811af1a77089173c67b44f674507c894407e05c844@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
 - link:https://lists.apache.org/thread.html/505233e52be5bb6a7f047b7bcaa806c0135920539f7c8a26b3a56ddd@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
-// - link:https://lists.apache.org/thread.html/baaaee55cb4e4daf8c6d9527cfbcf15d05ef58b50f9ee6d02146afa0@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
+- link:https://lists.apache.org/thread.html/1ecf754fed059b98e199e779add4f957b9f592d568f884cc36dbf9fd@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
 
 == Release information
 
