Apache Gradle > Gradle

--- a/netbeans.apache.org/src/content/download/nb110/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/index.asciidoc
@@ -85,7 +85,7 @@ Note: When rendered into HTML, the images will automatically be wrapped around '
 [.feature]
 --
 There's been lots of discussion in the Apache NetBeans Community about how best
-to express the fact that Apache Maven and Apache Gradle are more modern choices
+to express the fact that Apache Maven and Gradle are more modern choices
 to be aware of than Apache Ant, while at the same time not implying that
 there's anything wrong with using Apache Ant.
 
